deploy/k8s/components/prometheus-scrape/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alerta-next-backend-metrics
  labels:
    app.kubernetes.io/name: alerta-next-backend
    app.kubernetes.io/component: metrics
  annotations: # for Prometheus setups that discover targets by annotation
    prometheus.io/scrape: "true"
    prometheus.io/port: "8081"
    prometheus.io/path: /actuator/prometheus
spec:
  selector:
    app.kubernetes.io/name: alerta-next-backend
  ports:
    - name: http-metrics
      port: 8081
      targetPort: management
